<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myandriod.marryapp.MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtSex"
        android:hint="@string/edtSex" />

    <TextView
        android:text="@string/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtAge"
        android:hint="@string/edtAge" />

    <Button
        android:text="@string/btn_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_OK"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtR"
        android:textSize="25sp" />
</LinearLayout>
